[Java] Explicitly enable biased locking since the default value changed to false in JDK 15.