@@ -19,6 +19,7 @@ set /p VERSION=<..\..\version.txt
 
 "%JAVA_HOME%\bin\java" ^
     -cp ..\..\aeron-all\build\libs\aeron-all-%VERSION%.jar ^
+    -XX:+UseBiasedLocking ^
     -XX:BiasedLockingStartupDelay=0 ^
     -XX:+UnlockExperimentalVMOptions ^
     -XX:+TrustFinalNonStaticFields ^
